# AlexanderOS

./: .gitignore  Boot.ld  Boot.s  BootInformation.cpp  BootInformation.hpp  CMakeLists.txt  CPPSupport.cpp  Color.cpp  Color.hpp  DirectDisplay.cpp  DirectDisplay.hpp  Font.cpp  Font.hpp  Font.s  IDT.cpp  ISR.s  LICENSE  Makefile  MemoryMapEntry.hpp  PhysicalMemoryManager.cpp  PhysicalMemoryManager.hpp  README.md  TextBuffer.cpp  TextBuffer.hpp  VGATextModeBuffer.cpp  VGATextModeBuffer.hpp  boot.s  bootSector.s  boot_sector.s  buildBootSector.sh  gdt.s  grub.cfg  kernel.cpp  kernelEntryPoint.s  loadKernel.s  printString.s  printStringReal.s  print_string.s  printing.cpp  protectedMode.s  (+1 more)
bios/: Makefile  bootSector.ld  bootSector.s  gdt.s  kernel.cpp  kernelEntryPoint.s  loadKernel.s  printString.s  printStringReal.s  protectedMode.s
cmake/: CMakeLists.txt
common/: BootInformation.cpp  BootInformation.hpp  CMakeLists.txt  CPPSupport.cpp  CPUID.cpp  CPUID.hpp  Color.cpp  Color.hpp  DirectDisplayTextBuffer.cpp  DirectDisplayTextBuffer.hpp  DirectRGBTextBuffer.cpp  DirectRGBTextBuffer.hpp  EGATextBuffer.cpp  EGATextBuffer.hpp  FrameBuffer.hpp  Memory.cpp  Memory.hpp  MemoryAllocator.cpp  MemoryAllocator.hpp  MemoryAllocatorNode.hpp  MemoryMapEntry.hpp  SerialTextBuffer.cpp  SerialTextBuffer.hpp  TextBuffer.cpp  TextBuffer.hpp  VGATextModeBuffer.cpp  VGATextModeBuffer.hpp
docker/: Dockerfile
kernel/: Boot.S  Boot.ld  BootInformation.cpp  BootInformation.hpp  CMakeLists.txt  CPPSupport.cpp  Color.cpp  Color.hpp  DirectDisplay.cpp  DirectDisplay.hpp  DirectDisplayTextBuffer.hpp  Font.S  GDT.S  IDT.cpp  ISR.S  MemoryAllocator.cpp  MemoryAllocator.h  MemoryAllocatorNode.h  MemoryMapEntry.h  TextBuffer.cpp  TextBuffer.hpp  VGATextModeBuffer.hpp  kernel.cpp
kernelDefs/: CMakeLists.txt  CPPSupport.cpp  stddef.h  stdint.h  stubs.cpp
multiboot/: Makefile  boot.ld  boot.s  gdt.s  grub.cfg  idt.cpp  kernel.cpp
src/: CMakeLists.txt  IDT.cpp  ISR.s  boot.s  kernel.cpp  main.cpp
src/kernel/: BootInformation.cpp  BootInformation.hpp  CMakeLists.txt  CPPSupport.cpp  Color.cpp  Color.hpp  DirectDisplayTextBuffer.hpp  MemoryAllocator.cpp  MemoryAllocator.hpp  MemoryAllocatorNode.hpp  MemoryMapEntry.hpp  StandardDefinitions.hpp  TextBuffer.hpp  VGATextModeBuffer.hpp
testing/: CMakeLists.txt  UnitTesting.hpp
testing/unitTests/: CMakeLists.txt  ColorTests.cpp  MemoryAllocatorTests.cpp
